# opengl-sandbox

./: .gitignore  CMakeLists.txt  Makefile  Makefile - Copy  README.md  imgui.ini
resources/shaders/: basic.shader
src/: CMakeLists.txt  camera.h  index_buffer.cpp  index_buffer.h  renderer.cpp  renderer.h  shader.cpp  shader.h  test.cpp  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
src/tests/: CMakeLists.txt  test.cpp  test.h  test_clear_color.cpp  test_clear_color.h  test_texture2d.cpp  test_texture2d.h
testdir/: CMakeCache.txt  Makefile  cmake_install.cmake  imgui.ini
testdir/resources/shaders/: basic.shader
testdir/src/: Makefile  cmake_install.cmake  imgui.ini
testdir/src/tests/: Makefile  cmake_install.cmake
